Mise en place des pages des categories de tools et SEO

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -651,5 +651,85 @@
     "Formats acceptés: JPG, PNG, GIF. Taille max: 2MB": "Accepted formats: JPG, PNG, GIF. Max size: 2MB",
     "Image actuelle": "Current Image",
     "La nouvelle image remplacera celle-ci si une est fournie": "The new image will replace this one if provided",
-    "Exemple: https://example.com/images/banner.jpg": "Example: https://example.com/images/banner.jpg"
+    "Exemple: https://example.com/images/banner.jpg": "Example: https://example.com/images/banner.jpg",
+    
+    "Configuration de la détection d'AdBlock": "AdBlock Detection Configuration",
+    "Tester la détection": "Test Detection",
+    "Retour": "Back",
+    "Paramètres généraux": "General Settings",
+    "Activer la détection d'AdBlock": "Enable AdBlock Detection",
+    "Activez ou désactivez complètement la détection d'AdBlock sur votre site.": "Enable or disable AdBlock detection completely on your site.",
+    "Bloquer l'accès au contenu": "Block Content Access",
+    "Empêche les utilisateurs avec AdBlock d'accéder au contenu du site.": "Prevents users with AdBlock from accessing the site content.",
+    "Afficher un message": "Show Message",
+    "Affiche un message d'avertissement aux utilisateurs avec AdBlock.": "Displays a warning message to users with AdBlock.",
+    "Titre du message": "Message Title",
+    "Contenu du message": "Message Content",
+    "Texte du bouton": "Button Text",
+    "Temps d'attente avant de pouvoir fermer (secondes)": "Wait time before closing (seconds)",
+    "0 = pas de délai d'attente": "0 = no wait time",
+    "Enregistrer les modifications": "Save Changes",
+    "Aperçu du message": "Message Preview",
+    "Afficher l'aperçu": "Show Preview",
+    
+    "Test de la détection d'AdBlock": "AdBlock Detection Test",
+    "Retour aux paramètres": "Back to Settings",
+    "Instructions": "Instructions",
+    "Cette page vous permet de tester le fonctionnement de la détection d'AdBlock. Voici comment procéder :": "This page allows you to test how AdBlock detection works. Here's how to proceed:",
+    "Activez ou désactivez votre extension AdBlock pour voir son effet": "Enable or disable your AdBlock extension to see its effect",
+    "Cliquez sur \"Déclencher la détection\" pour simuler la détection d'AdBlock": "Click on \"Trigger Detection\" to simulate AdBlock detection",
+    "Observez comment le message s'affiche en fonction des paramètres définis": "Observe how the message displays according to the defined settings",
+    "Déclencher la détection": "Trigger Detection",
+    "Réinitialiser": "Reset",
+    "Zone de test": "Test Area",
+    "Ce texte simule une publicité.": "This text simulates an advertisement.",
+    "Si vous utilisez un AdBlock, il sera probablement caché.": "If you're using AdBlock, it will probably be hidden.",
+    "Le test n'a pas encore été effectué. Cliquez sur \"Déclencher la détection\".": "The test has not been performed yet. Click on \"Trigger Detection\".",
+    "AdBlock détecté! L'élément de test est caché.": "AdBlock detected! The test element is hidden.",
+    "Aucun AdBlock détecté. L'élément de test est visible.": "No AdBlock detected. The test element is visible.",
+    
+    "Gestion des publicités": "Ad Management",
+    "Tester les publicités": "Test Ads",
+    "Nouvelle publicité": "New Ad",
+    "Avant la navigation": "Before Navigation",
+    "Après la navigation": "After Navigation",
+    "Avant le titre de l'outil": "Before Tool Title",
+    "Après la description de l'outil": "After Tool Description",
+    "Avant l'outil": "Before Tool",
+    "Après l'outil": "After Tool",
+    "Barre latérale gauche": "Left Sidebar",
+    "Barre latérale droite": "Right Sidebar",
+    "En bas de l'outil": "Bottom of Tool",
+    "Avant le pied de page": "Before Footer",
+    "Après le pied de page": "After Footer",
+    "Image publicitaire": "Ad Image",
+    "Code AdSense": "AdSense Code",
+    "Actif": "Active",
+    "Inactif": "Inactive",
+    "Priorité": "Priority",
+    "Affichage sur": "Display on",
+    "Accueil": "Home",
+    "Outils": "Tools",
+    "Catégories": "Categories", 
+    "Admin": "Admin",
+    "Aucune publicité configurée pour cette position.": "No ads configured for this position.",
+    "Ajouter une publicité ici": "Add an ad here",
+    "Êtes-vous sûr de vouloir supprimer cette publicité ?": "Are you sure you want to delete this ad?",
+    
+    "Configuration globale": "Global Configuration",
+    "AdBlock Detection": "AdBlock Detection",
+    "Outils disponibles": "Available Tools",
+    "Aucun outil disponible dans cette catégorie pour le moment.": "No tools available in this category at the moment.",
+    "Autres catégories": "Other Categories",
+    "Premium": "Premium",
+    "Erreur serveur": "Server Error",
+    "Nous rencontrons un problème technique. Nos équipes ont été notifiées et travaillent à la résolution du problème.": "We are experiencing a technical issue. Our teams have been notified and are working to resolve the problem.",
+    "Vous pouvez essayer les actions suivantes:": "You can try the following actions:",
+    "Rafraîchir la page": "Refresh the page",
+    "Revenir à la page précédente": "Return to the previous page",
+    "Revenir à l'accueil": "Return to the homepage",
+    "Retour": "Back",
+    "Page non trouvée": "Page not found",
+    "La page que vous recherchez n'existe pas ou a été déplacée.": "The page you are looking for doesn't exist or has been moved.",
+    "Vérifier l'URL pour les erreurs de frappe": "Check the URL for typing errors"
 } 
