--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -626,5 +626,83 @@
     "Formats acceptés: JPG, PNG, GIF. Taille max: 2MB": "Formatos aceptados: JPG, PNG, GIF. Tamaño máximo: 2MB",
     "Image actuelle": "Imagen actual",
     "La nouvelle image remplacera celle-ci si une est fournie": "La nueva imagen reemplazará esta si se proporciona",
-    "Exemple: https://example.com/images/banner.jpg": "Ejemplo: https://example.com/images/banner.jpg"
+    "Exemple: https://example.com/images/banner.jpg": "Ejemplo: https://example.com/images/banner.jpg",
+    "Configuration de la détection d'AdBlock": "Configuración de detección de AdBlock",
+    "Tester la détection": "Probar detección",
+    "Retour": "Volver",
+    "Paramètres généraux": "Configuración general",
+    "Activer la détection d'AdBlock": "Activar detección de AdBlock",
+    "Activez ou désactivez complètement la détection d'AdBlock sur votre site.": "Activar o desactivar completamente la detección de AdBlock en su sitio.",
+    "Bloquer l'accès au contenu": "Bloquear acceso al contenido",
+    "Empêche les utilisateurs avec AdBlock d'accéder au contenu du site.": "Impide que los usuarios con AdBlock accedan al contenido del sitio.",
+    "Afficher un message": "Mostrar mensaje",
+    "Affiche un message d'avertissement aux utilisateurs avec AdBlock.": "Muestra un mensaje de advertencia a los usuarios con AdBlock.",
+    "Titre du message": "Título del mensaje",
+    "Contenu du message": "Contenido del mensaje",
+    "Texte du bouton": "Texto del botón",
+    "Temps d'attente avant de pouvoir fermer (secondes)": "Tiempo de espera antes de poder cerrar (segundos)",
+    "0 = pas de délai d'attente": "0 = sin tiempo de espera",
+    "Enregistrer les modifications": "Guardar cambios",
+    "Aperçu du message": "Vista previa del mensaje",
+    "Afficher l'aperçu": "Mostrar vista previa",
+    
+    "Test de la détection d'AdBlock": "Prueba de detección de AdBlock",
+    "Retour aux paramètres": "Volver a la configuración",
+    "Instructions": "Instrucciones",
+    "Cette page vous permet de tester le fonctionnement de la détection d'AdBlock. Voici comment procéder :": "Esta página le permite probar el funcionamiento de la detección de AdBlock. Así es como proceder:",
+    "Activez ou désactivez votre extension AdBlock pour voir son effet": "Active o desactive su extensión AdBlock para ver su efecto",
+    "Cliquez sur \"Déclencher la détection\" pour simuler la détection d'AdBlock": "Haga clic en \"Activar detección\" para simular la detección de AdBlock",
+    "Observez comment le message s'affiche en fonction des paramètres définis": "Observe cómo se muestra el mensaje según la configuración definida",
+    "Déclencher la détection": "Activar detección",
+    "Réinitialiser": "Restablecer",
+    "Zone de test": "Área de prueba",
+    "Ce texte simule une publicité.": "Este texto simula un anuncio.",
+    "Si vous utilisez un AdBlock, il sera probablement caché.": "Si usa AdBlock, probablemente estará oculto.",
+    "Le test n'a pas encore été effectué. Cliquez sur \"Déclencher la détection\".": "La prueba aún no se ha realizado. Haga clic en \"Activar detección\".",
+    "AdBlock détecté! L'élément de test est caché.": "¡AdBlock detectado! El elemento de prueba está oculto.",
+    "Aucun AdBlock détecté. L'élément de test est visible.": "No se detectó AdBlock. El elemento de prueba es visible.",
+    
+    "Gestion des publicités": "Gestión de anuncios",
+    "Tester les publicités": "Probar anuncios",
+    "Nouvelle publicité": "Nuevo anuncio",
+    "Avant la navigation": "Antes de la navegación",
+    "Après la navigation": "Después de la navegación",
+    "Avant le titre de l'outil": "Antes del título de la herramienta",
+    "Après la description de l'outil": "Después de la descripción de la herramienta",
+    "Avant l'outil": "Antes de la herramienta",
+    "Après l'outil": "Después de la herramienta",
+    "Barre latérale gauche": "Barra lateral izquierda",
+    "Barre latérale droite": "Barra lateral derecha",
+    "En bas de l'outil": "En la parte inferior de la herramienta",
+    "Avant le pied de page": "Antes del pie de página",
+    "Après le pied de page": "Después del pie de página",
+    "Image publicitaire": "Imagen publicitaria",
+    "Code AdSense": "Código AdSense",
+    "Actif": "Activo",
+    "Inactif": "Inactivo",
+    "Priorité": "Prioridad",
+    "Affichage sur": "Mostrar en",
+    "Accueil": "Inicio",
+    "Outils": "Herramientas",
+    "Catégories": "Categorías", 
+    "Admin": "Admin",
+    "Aucune publicité configurée pour cette position.": "No hay anuncios configurados para esta posición.",
+    "Ajouter une publicité ici": "Añadir un anuncio aquí",
+    "Êtes-vous sûr de vouloir supprimer cette publicité ?": "¿Está seguro de que desea eliminar este anuncio?",
+    
+    "Configuration globale": "Configuración global",
+    "AdBlock Detection": "Detección de AdBlock",
+    "Outils disponibles": "Herramientas disponibles",
+    "Aucun outil disponible dans cette catégorie pour le moment.": "No hay herramientas disponibles en esta categoría por el momento.",
+    "Autres catégories": "Otras categorías",
+    "Erreur serveur": "Error del servidor",
+    "Nous rencontrons un problème technique. Nos équipes ont été notifiées et travaillent à la résolution du problème.": "Estamos experimentando un problema técnico. Nuestros equipos han sido notificados y están trabajando para resolver el problema.",
+    "Vous pouvez essayer les actions suivantes:": "Puede intentar las siguientes acciones:",
+    "Rafraîchir la page": "Actualizar la página",
+    "Revenir à la page précédente": "Volver a la página anterior",
+    "Revenir à l'accueil": "Volver a la página de inicio",
+    "Retour": "Atrás",
+    "Page non trouvée": "Página no encontrada",
+    "La page que vous recherchez n'existe pas ou a été déplacée.": "La página que estás buscando no existe o ha sido movida.",
+    "Vérifier l'URL pour les erreurs de frappe": "Verificar la URL por errores de escritura"
 } 
