--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -648,5 +648,83 @@
     "Formats acceptés: JPG, PNG, GIF. Taille max: 2MB": "Formats acceptés: JPG, PNG, GIF. Taille max: 2MB",
     "Image actuelle": "Image actuelle",
     "La nouvelle image remplacera celle-ci si une est fournie": "La nouvelle image remplacera celle-ci si une est fournie",
-    "Exemple: https://example.com/images/banner.jpg": "Exemple: https://example.com/images/banner.jpg"
+    "Exemple: https://example.com/images/banner.jpg": "Exemple: https://example.com/images/banner.jpg",
+    "Configuration de la détection d'AdBlock": "Configuration de la détection d'AdBlock",
+    "Tester la détection": "Tester la détection",
+    "Retour": "Retour",
+    "Paramètres généraux": "Paramètres généraux",
+    "Activer la détection d'AdBlock": "Activer la détection d'AdBlock",
+    "Activez ou désactivez complètement la détection d'AdBlock sur votre site.": "Activez ou désactivez complètement la détection d'AdBlock sur votre site.",
+    "Bloquer l'accès au contenu": "Bloquer l'accès au contenu",
+    "Empêche les utilisateurs avec AdBlock d'accéder au contenu du site.": "Empêche les utilisateurs avec AdBlock d'accéder au contenu du site.",
+    "Afficher un message": "Afficher un message",
+    "Affiche un message d'avertissement aux utilisateurs avec AdBlock.": "Affiche un message d'avertissement aux utilisateurs avec AdBlock.",
+    "Titre du message": "Titre du message",
+    "Contenu du message": "Contenu du message",
+    "Texte du bouton": "Texte du bouton",
+    "Temps d'attente avant de pouvoir fermer (secondes)": "Temps d'attente avant de pouvoir fermer (secondes)",
+    "0 = pas de délai d'attente": "0 = pas de délai d'attente",
+    "Enregistrer les modifications": "Enregistrer les modifications",
+    "Aperçu du message": "Aperçu du message",
+    "Afficher l'aperçu": "Afficher l'aperçu",
+    
+    "Test de la détection d'AdBlock": "Test de la détection d'AdBlock",
+    "Retour aux paramètres": "Retour aux paramètres",
+    "Instructions": "Instructions",
+    "Cette page vous permet de tester le fonctionnement de la détection d'AdBlock. Voici comment procéder :": "Cette page vous permet de tester le fonctionnement de la détection d'AdBlock. Voici comment procéder :",
+    "Activez ou désactivez votre extension AdBlock pour voir son effet": "Activez ou désactivez votre extension AdBlock pour voir son effet",
+    "Cliquez sur \"Déclencher la détection\" pour simuler la détection d'AdBlock": "Cliquez sur \"Déclencher la détection\" pour simuler la détection d'AdBlock",
+    "Observez comment le message s'affiche en fonction des paramètres définis": "Observez comment le message s'affiche en fonction des paramètres définis",
+    "Déclencher la détection": "Déclencher la détection",
+    "Réinitialiser": "Réinitialiser",
+    "Zone de test": "Zone de test",
+    "Ce texte simule une publicité.": "Ce texte simule une publicité.",
+    "Si vous utilisez un AdBlock, il sera probablement caché.": "Si vous utilisez un AdBlock, il sera probablement caché.",
+    "Le test n'a pas encore été effectué. Cliquez sur \"Déclencher la détection\".": "Le test n'a pas encore été effectué. Cliquez sur \"Déclencher la détection\".",
+    "AdBlock détecté! L'élément de test est caché.": "AdBlock détecté! L'élément de test est caché.",
+    "Aucun AdBlock détecté. L'élément de test est visible.": "Aucun AdBlock détecté. L'élément de test est visible.",
+    
+    "Gestion des publicités": "Gestion des publicités",
+    "Tester les publicités": "Tester les publicités",
+    "Nouvelle publicité": "Nouvelle publicité",
+    "Avant la navigation": "Avant la navigation",
+    "Après la navigation": "Après la navigation",
+    "Avant le titre de l'outil": "Avant le titre de l'outil",
+    "Après la description de l'outil": "Après la description de l'outil",
+    "Avant l'outil": "Avant l'outil",
+    "Après l'outil": "Après l'outil",
+    "Barre latérale gauche": "Barre latérale gauche",
+    "Barre latérale droite": "Barre latérale droite",
+    "En bas de l'outil": "En bas de l'outil",
+    "Avant le pied de page": "Avant le pied de page",
+    "Après le pied de page": "Après le pied de page",
+    "Image publicitaire": "Image publicitaire",
+    "Code AdSense": "Code AdSense",
+    "Actif": "Actif",
+    "Inactif": "Inactif",
+    "Priorité": "Priorité",
+    "Affichage sur": "Affichage sur",
+    "Accueil": "Accueil",
+    "Outils": "Outils",
+    "Catégories": "Catégories",
+    "Admin": "Admin",
+    "Aucune publicité configurée pour cette position.": "Aucune publicité configurée pour cette position.",
+    "Ajouter une publicité ici": "Ajouter une publicité ici",
+    "Êtes-vous sûr de vouloir supprimer cette publicité ?": "Êtes-vous sûr de vouloir supprimer cette publicité ?",
+    
+    "Configuration globale": "Configuration globale",
+    "AdBlock Detection": "Détection d'AdBlock",
+    "Outils disponibles": "Outils disponibles",
+    "Aucun outil disponible dans cette catégorie pour le moment.": "Aucun outil disponible dans cette catégorie pour le moment.",
+    "Autres catégories": "Autres catégories",
+    "Erreur serveur": "Erreur serveur",
+    "Nous rencontrons un problème technique. Nos équipes ont été notifiées et travaillent à la résolution du problème.": "Nous rencontrons un problème technique. Nos équipes ont été notifiées et travaillent à la résolution du problème.",
+    "Vous pouvez essayer les actions suivantes:": "Vous pouvez essayer les actions suivantes:",
+    "Rafraîchir la page": "Rafraîchir la page",
+    "Revenir à la page précédente": "Revenir à la page précédente",
+    "Revenir à l'accueil": "Revenir à l'accueil",
+    "Retour": "Retour",
+    "Page non trouvée": "Page non trouvée",
+    "La page que vous recherchez n'existe pas ou a été déplacée.": "La page que vous recherchez n'existe pas ou a été déplacée.",
+    "Vérifier l'URL pour les erreurs de frappe": "Vérifier l'URL pour les erreurs de frappe"
 } 
