fin de la conception dynamique des testimonials

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -731,5 +731,76 @@
     "Retour": "Back",
     "Page non trouvée": "Page not found",
     "La page que vous recherchez n'existe pas ou a été déplacée.": "The page you are looking for doesn't exist or has been moved.",
-    "Vérifier l'URL pour les erreurs de frappe": "Check the URL for typing errors"
+    "Vérifier l'URL pour les erreurs de frappe": "Check the URL for typing errors",
+    "View all FAQs": "View all FAQs",
+    "Questions fréquemment posées": "Frequently Asked Questions",
+    "Trouvez rapidement des réponses à vos questions.": "Find answers to your questions quickly.",
+    "Questions populaires": "Popular Questions",
+    "Voir les :count questions": "View :count questions",
+    "Catégorie": "Category",
+    "Vous n'avez pas trouvé ce que vous cherchiez ?": "Didn't find what you were looking for?",
+    "Contactez-nous pour toute autre question.": "Contact us for any other questions.",
+    "Nous contacter": "Contact Us",
+    "Retour à toutes les FAQs": "Back to all FAQs",
+    "Aucune FAQ disponible dans cette catégorie pour le moment.": "No FAQs available in this category at the moment.",
+    
+    "Liste des FAQs": "FAQ List",
+    "Ajouter une FAQ": "Add FAQ",
+    "Question": "Question",
+    "Réponse": "Answer",
+    "Catégorie": "Category",
+    "Statut": "Status",
+    "Ordre": "Order",
+    "Actions": "Actions",
+    "Actif": "Active",
+    "Inactif": "Inactive",
+    "Non catégorisé": "Uncategorized",
+    "Éditer": "Edit",
+    "Supprimer": "Delete",
+    "Aucune FAQ trouvée.": "No FAQs found.",
+    "Retour à la liste": "Back to list",
+    "Sélectionner une catégorie": "Select a category",
+    "Enregistrer": "Save",
+    "Enregistrer les modifications": "Save changes",
+    "Êtes-vous sûr de vouloir supprimer cette FAQ ?": "Are you sure you want to delete this FAQ?",
+    "Modifier la FAQ": "Edit FAQ",
+    "FAQ créée avec succès.": "FAQ created successfully.",
+    "FAQ mise à jour avec succès.": "FAQ updated successfully.",
+    "FAQ supprimée avec succès.": "FAQ deleted successfully.",
+    
+    "Catégories de FAQ": "FAQ Categories",
+    "Ajouter une catégorie": "Add Category",
+    "Nom": "Name",
+    "Slug": "Slug",
+    "Description": "Description",
+    "Icône": "Icon",
+    "Nombre de FAQs": "Number of FAQs",
+    "Non défini": "Not set",
+    "Aucune catégorie de FAQ trouvée.": "No FAQ categories found.",
+    "Ajouter une catégorie de FAQ": "Add FAQ Category",
+    "Icône (classe FontAwesome)": "Icon (FontAwesome class)",
+    "Exemple : fas fa-question-circle": "Example: fas fa-question-circle",
+    "Modifier la catégorie :": "Edit category:",
+    "Êtes-vous sûr de vouloir supprimer cette catégorie ?": "Are you sure you want to delete this category?",
+    "Catégorie de FAQ créée avec succès.": "FAQ category created successfully.",
+    "Catégorie de FAQ mise à jour avec succès.": "FAQ category updated successfully.",
+    "Catégorie de FAQ supprimée avec succès.": "FAQ category deleted successfully.",
+    "FAQ Categories": "FAQ Categories",
+    "Add a FAQ Category": "Add a FAQ Category",
+    "Edit FAQ Category": "Edit FAQ Category",
+    "Add Category": "Add Category",
+    "Back to list": "Back to list",
+    "Main Information": "Main Information",
+    "Translations": "Translations",
+    "None": "None",
+    "Active": "Active",
+    "Inactive": "Inactive",
+    "Default language": "Default language",
+    "Existing translation": "Existing translation",
+    "Select a language to add a translation": "Select a language to add a translation",
+    "Are you sure you want to delete this category?": "Are you sure you want to delete this category?",
+    "FAQ category added successfully.": "FAQ category added successfully.",
+    "FAQ category updated successfully.": "FAQ category updated successfully.",
+    "FAQ category deleted successfully.": "FAQ category deleted successfully.",
+    "Category order updated successfully.": "Category order updated successfully."
 } 
