--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -704,5 +704,35 @@
     "Retour": "Atrás",
     "Page non trouvée": "Página no encontrada",
     "La page que vous recherchez n'existe pas ou a été déplacée.": "La página que estás buscando no existe o ha sido movida.",
-    "Vérifier l'URL pour les erreurs de frappe": "Verificar la URL por errores de escritura"
+    "Vérifier l'URL pour les erreurs de frappe": "Verificar la URL por errores de escritura",
+    "Testimonial created successfully": "Testimonio creado con éxito",
+    "Testimonial updated successfully": "Testimonio actualizado con éxito",
+    "Testimonial deleted successfully": "Testimonio eliminado con éxito",
+    "Testimonial status updated successfully": "Estado del testimonio actualizado con éxito",
+    "Liste des témoignages": "Lista de testimonios",
+    "Ajouter un témoignage": "Añadir testimonio",
+    "Modération témoignages": "Moderación de testimonios",
+    "Modifier le témoignage": "Editar testimonio",
+    "Nom": "Nombre",
+    "Poste": "Cargo",
+    "Évaluation": "Valoración",
+    "Ordre d'affichage": "Orden de visualización",
+    "Avatar": "Avatar",
+    "Actif": "Activo",
+    "Inactif": "Inactivo",
+    "Contenu du témoignage": "Contenido del testimonio",
+    "Traductions": "Traducciones",
+    "Enregistrer": "Guardar",
+    "Retour à la liste": "Volver a la lista",
+    "Êtes-vous sûr de vouloir supprimer ce témoignage ?": "¿Estás seguro de que quieres eliminar este testimonio?",
+    "Aucun témoignage trouvé.": "No se encontraron testimonios.",
+    "Image au format JPG, PNG ou GIF (max 2MB)": "Imagen en formato JPG, PNG o GIF (máx. 2MB)",
+    "étoiles": "estrellas",
+    "étoile": "estrella",
+    "Éditer": "Editar",
+    "Supprimer": "Eliminar",
+    "Désactiver": "Desactivar",
+    "Activer": "Activar",
+    "What People Say": "Lo que dice la gente",
+    "Trusted by thousands of developers worldwide": "Confiado por miles de desarrolladores en todo el mundo"
 } 
