--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -444,26 +444,33 @@
     "Liste des témoignages": "Liste des témoignages",
     "Ajouter un témoignage": "Ajouter un témoignage",
     "Modération témoignages": "Modération témoignages",
-    "Options avancées": "Options avancées",
-    "Logs": "Logs",
-    "Cache": "Cache",
-    "Files": "Fichiers",
-    "Panel Admin": "Panel Admin",
-    "SEO": "SEO",
-    "Page d'accueil": "Page d'accueil",
-    "Pages Auth": "Pages Auth",
-    "Pages légales": "Pages légales",
-    "Page Contact": "Page Contact",
-    "Télécharger le template actuel": "Télécharger le template actuel",
-    "Tester une adresse IP": "Tester une adresse IP",
-    "Adresse IP à tester": "Adresse IP à tester",
-    "Tester": "Tester",
-    "L'adresse IP est autorisée et pourra accéder au site en mode maintenance.": "L'adresse IP est autorisée et pourra accéder au site en mode maintenance.",
-    "L'adresse IP n'est pas autorisée et verra la page de maintenance.": "L'adresse IP n'est pas autorisée et verra la page de maintenance.",
-    "Réinitialiser les paramètres": "Réinitialiser les paramètres",
-    "Tous les paramètres ont été réinitialisés à leurs valeurs par défaut.": "Tous les paramètres ont été réinitialisés à leurs valeurs par défaut.",
-    "Le cache a été vidé avec succès.": "Le cache a été vidé avec succès.",
-    "Êtes-vous sûr de vouloir réinitialiser tous les paramètres ? Cette action est irréversible.": "Êtes-vous sûr de vouloir réinitialiser tous les paramètres ? Cette action est irréversible.",
+    "Témoignage créé avec succès": "Témoignage créé avec succès",
+    "Témoignage mis à jour avec succès": "Témoignage mis à jour avec succès",
+    "Témoignage supprimé avec succès": "Témoignage supprimé avec succès",
+    "Statut du témoignage mis à jour avec succès": "Statut du témoignage mis à jour avec succès",
+    "Modifier le témoignage": "Modifier le témoignage",
+    "Nom": "Nom",
+    "Poste": "Poste",
+    "Évaluation": "Évaluation",
+    "Ordre d'affichage": "Ordre d'affichage",
+    "Avatar": "Avatar",
+    "Actif": "Actif",
+    "Inactif": "Inactif",
+    "Contenu du témoignage": "Contenu du témoignage",
+    "Traductions": "Traductions",
+    "Enregistrer": "Enregistrer",
+    "Retour à la liste": "Retour à la liste",
+    "Êtes-vous sûr de vouloir supprimer ce témoignage ?": "Êtes-vous sûr de vouloir supprimer ce témoignage ?",
+    "Aucun témoignage trouvé.": "Aucun témoignage trouvé.",
+    "Image au format JPG, PNG ou GIF (max 2MB)": "Image au format JPG, PNG ou GIF (max 2MB)",
+    "étoiles": "étoiles",
+    "étoile": "étoile",
+    "Éditer": "Éditer",
+    "Supprimer": "Supprimer",
+    "Désactiver": "Désactiver",
+    "Activer": "Activer",
+    "What People Say": "Ce que disent nos utilisateurs",
+    "Trusted by thousands of developers worldwide": "Utilisé par des milliers de développeurs à travers le monde",
     "Opération annulée.": "Opération annulée.",
     "SEO & Metadata": "SEO & Metadata",
     "Meta Titre": "Meta Titre",
@@ -726,5 +733,121 @@
     "Retour": "Retour",
     "Page non trouvée": "Page non trouvée",
     "La page que vous recherchez n'existe pas ou a été déplacée.": "La page que vous recherchez n'existe pas ou a été déplacée.",
-    "Vérifier l'URL pour les erreurs de frappe": "Vérifier l'URL pour les erreurs de frappe"
+    "Vérifier l'URL pour les erreurs de frappe": "Vérifier l'URL pour les erreurs de frappe",
+    "No FAQs available at the moment.": "Aucune FAQ disponible pour le moment.",
+    "View all FAQs": "Voir toutes les FAQs",
+    "Questions fréquemment posées": "Questions fréquemment posées",
+    "Trouvez rapidement des réponses à vos questions.": "Trouvez rapidement des réponses à vos questions.",
+    "Questions populaires": "Questions populaires",
+    "Voir les :count questions": "Voir les :count questions",
+    "Vous n'avez pas trouvé ce que vous cherchiez ?": "Vous n'avez pas trouvé ce que vous cherchiez ?",
+    "Contactez-nous pour toute autre question.": "Contactez-nous pour toute autre question.",
+    "Nous contacter": "Nous contacter",
+    "Retour à toutes les FAQs": "Retour à toutes les FAQs",
+    "Aucune FAQ disponible dans cette catégorie pour le moment.": "Aucune FAQ disponible dans cette catégorie pour le moment.",
+    
+    "Liste des FAQs": "Liste des FAQs",
+    "Question": "Question",
+    "Réponse": "Réponse",
+    "Catégorie": "Catégorie",
+    "Statut": "Statut",
+    "Ordre": "Ordre",
+    "Actions": "Actions",
+    "Actif": "Actif",
+    "Inactif": "Inactif",
+    "Non catégorisé": "Non catégorisé",
+    "Éditer": "Éditer",
+    "Supprimer": "Supprimer",
+    "Aucune FAQ trouvée.": "Aucune FAQ trouvée.",
+    "Retour à la liste": "Retour à la liste",
+    "Sélectionner une catégorie": "Sélectionner une catégorie",
+    "Enregistrer": "Enregistrer",
+    "Enregistrer les modifications": "Enregistrer les modifications",
+    "Êtes-vous sûr de vouloir supprimer cette FAQ ?": "Êtes-vous sûr de vouloir supprimer cette FAQ ?",
+    "Modifier la FAQ": "Modifier la FAQ",
+    "FAQ créée avec succès.": "FAQ créée avec succès.",
+    "FAQ mise à jour avec succès.": "FAQ mise à jour avec succès.",
+    "FAQ supprimée avec succès.": "FAQ supprimée avec succès.",
+    
+    "Catégories de FAQ": "Catégories de FAQ",
+    "Ajouter une catégorie": "Ajouter une catégorie",
+    "Nom": "Nom",
+    "Slug": "Slug",
+    "Description": "Description",
+    "Icône": "Icône",
+    "Nombre de FAQs": "Nombre de FAQs",
+    "Non défini": "Non défini",
+    "Aucune catégorie de FAQ trouvée.": "Aucune catégorie de FAQ trouvée.",
+    "Ajouter une catégorie de FAQ": "Ajouter une catégorie de FAQ",
+    "Icône (classe FontAwesome)": "Icône (classe FontAwesome)",
+    "Exemple : fas fa-question-circle": "Exemple : fas fa-question-circle",
+    "Modifier la catégorie :": "Modifier la catégorie :",
+    "Êtes-vous sûr de vouloir supprimer cette catégorie ?": "Êtes-vous sûr de vouloir supprimer cette catégorie ?",
+    "Catégorie de FAQ créée avec succès.": "Catégorie de FAQ créée avec succès.",
+    "Catégorie de FAQ mise à jour avec succès.": "Catégorie de FAQ mise à jour avec succès.",
+    "Catégorie de FAQ supprimée avec succès.": "Catégorie de FAQ supprimée avec succès.",
+    "FAQ Categories": "Catégories de FAQ",
+    "Add a FAQ Category": "Ajouter une catégorie de FAQ",
+    "Edit FAQ Category": "Modifier une catégorie de FAQ",
+    "Add Category": "Ajouter une catégorie",
+    "Back to list": "Retour à la liste",
+    "Main Information": "Informations principales",
+    "Translations": "Traductions",
+    "None": "Aucune",
+    "Active": "Actif",
+    "Inactive": "Inactif",
+    "Default language": "Langue par défaut",
+    "Existing translation": "Traduction existante",
+    "Select a language to add a translation": "Sélectionnez une langue pour ajouter une traduction",
+    "Are you sure you want to delete this category?": "Êtes-vous sûr de vouloir supprimer cette catégorie ?",
+    "FAQ category added successfully.": "Catégorie de FAQ ajoutée avec succès.",
+    "FAQ category updated successfully.": "Catégorie de FAQ mise à jour avec succès.",
+    "FAQ category deleted successfully.": "Catégorie de FAQ supprimée avec succès.",
+    "Category order updated successfully.": "Ordre des catégories mis à jour avec succès.",
+    "Logs": "Logs",
+    "Cache": "Cache",
+    "Files": "Fichiers",
+    "Panel Admin": "Panel Admin",
+    "SEO": "SEO",
+    "Page d'accueil": "Page d'accueil",
+    "Pages Auth": "Pages Auth",
+    "Pages légales": "Pages légales",
+    "Page Contact": "Page Contact",
+    "Télécharger le template actuel": "Télécharger le template actuel",
+    "Tester une adresse IP": "Tester une adresse IP",
+    "Adresse IP à tester": "Adresse IP à tester",
+    "Tester": "Tester",
+    "L'adresse IP est autorisée et pourra accéder au site en mode maintenance.": "L'adresse IP est autorisée et pourra accéder au site en mode maintenance.",
+    "L'adresse IP n'est pas autorisée et verra la page de maintenance.": "L'adresse IP n'est pas autorisée et verra la page de maintenance.",
+    "Réinitialiser les paramètres": "Réinitialiser les paramètres",
+    "Tous les paramètres ont été réinitialisés à leurs valeurs par défaut.": "Tous les paramètres ont été réinitialisés à leurs valeurs par défaut.",
+    "Le cache a été vidé avec succès.": "Le cache a été vidé avec succès.",
+    "Êtes-vous sûr de vouloir réinitialiser tous les paramètres ? Cette action est irréversible.": "Êtes-vous sûr de vouloir réinitialiser tous les paramètres ? Cette action est irréversible.",
+    "Testimonial created successfully": "Témoignage créé avec succès",
+    "Testimonial updated successfully": "Témoignage mis à jour avec succès",
+    "Testimonial deleted successfully": "Témoignage supprimé avec succès",
+    "Testimonial status updated successfully": "Statut du témoignage mis à jour avec succès",
+    "Modifier le témoignage": "Modifier le témoignage",
+    "Nom": "Nom",
+    "Poste": "Poste",
+    "Évaluation": "Évaluation",
+    "Ordre d'affichage": "Ordre d'affichage",
+    "Avatar": "Avatar",
+    "Actif": "Actif",
+    "Inactif": "Inactif",
+    "Contenu du témoignage": "Contenu du témoignage",
+    "Traductions": "Traductions",
+    "Enregistrer": "Enregistrer",
+    "Retour à la liste": "Retour à la liste",
+    "Êtes-vous sûr de vouloir supprimer ce témoignage ?": "Êtes-vous sûr de vouloir supprimer ce témoignage ?",
+    "Aucun témoignage trouvé.": "Aucun témoignage trouvé.",
+    "Image au format JPG, PNG ou GIF (max 2MB)": "Image au format JPG, PNG ou GIF (max 2MB)",
+    "étoiles": "étoiles",
+    "étoile": "étoile",
+    "Éditer": "Éditer",
+    "Supprimer": "Supprimer",
+    "Désactiver": "Désactiver",
+    "Activer": "Activer",
+    "What People Say": "Ce que disent nos utilisateurs",
+    "Trusted by thousands of developers worldwide": "Utilisé par des milliers de développeurs à travers le monde"
 } 
