Debut de la mise en place  des Packages

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -849,5 +849,74 @@
     "Désactiver": "Désactiver",
     "Activer": "Activer",
     "What People Say": "Ce que disent nos utilisateurs",
-    "Trusted by thousands of developers worldwide": "Utilisé par des milliers de développeurs à travers le monde"
+    "Trusted by thousands of developers worldwide": "Utilisé par des milliers de développeurs à travers le monde",
+    "Nos Packages": "Nos Packages",
+    "Choisissez le forfait qui correspond à vos besoins et accédez à notre gamme d'outils.": "Choisissez le forfait qui correspond à vos besoins et accédez à notre gamme d'outils.",
+    "Mensuel": "Mensuel",
+    "Annuel": "Annuel",
+    "À vie": "À vie",
+    "Économisez plus": "Économisez plus",
+    "Gratuit": "Gratuit",
+    "RECOMMANDÉ": "RECOMMANDÉ",
+    "mois": "mois",
+    "facturé annuellement": "facturé annuellement",
+    "à vie": "à vie",
+    "Non disponible": "Non disponible",
+    "Outils disponibles": "Outils disponibles",
+    "Outils VIP": "Outils VIP",
+    "Outils IA": "Outils IA",
+    "Publicités": "Publicités",
+    "Sans publicités": "Sans publicités",
+    "Validité": "Validité",
+    "Caractéristiques": "Caractéristiques",
+    "Obtenir": "Obtenir",
+    "Acheter maintenant": "Acheter maintenant",
+    
+    "Gestion des packages": "Gestion des packages",
+    "Ajouter un package": "Ajouter un package",
+    "Créer un nouveau package": "Créer un nouveau package",
+    "Modifier le package": "Modifier le package",
+    "Retour à la liste": "Retour à la liste",
+    "Slug": "Slug",
+    "Couleur": "Couleur",
+    "Type de cycle": "Type de cycle",
+    "Nombre de cycles": "Nombre de cycles",
+    "Prix mensuel": "Prix mensuel",
+    "Prix annuel": "Prix annuel",
+    "Prix à vie": "Prix à vie",
+    "Ordre d'affichage": "Ordre d'affichage",
+    "Afficher les publicités": "Afficher les publicités",
+    "Package actif": "Package actif",
+    "Package par défaut": "Package par défaut",
+    "Traductions": "Traductions",
+    "Nom": "Nom",
+    "Description": "Description",
+    "Caractéristiques": "Caractéristiques",
+    "Outils disponibles": "Outils disponibles",
+    "Sélectionnez une catégorie": "Sélectionnez une catégorie",
+    "Sélectionner tous": "Sélectionner tous",
+    "Désélectionner tous": "Désélectionner tous",
+    "VIP": "VIP",
+    "IA": "IA",
+    "Annuler": "Annuler",
+    "Enregistrer": "Enregistrer",
+    "Générer": "Générer",
+    "Configuration des packages": "Configuration des packages",
+    "Paramètres des packages": "Paramètres des packages",
+    "Package supprimé avec succès.": "Package supprimé avec succès.",
+    "Package créé avec succès.": "Package créé avec succès.",
+    "Package modifié avec succès.": "Package modifié avec succès.",
+    "Statut mis à jour avec succès.": "Statut mis à jour avec succès.",
+    
+    "Jour": "Jour",
+    "Jours": "Jours",
+    "Semaine": "Semaine",
+    "Semaines": "Semaines",
+    "Mois": "Mois",
+    "Mois": "Mois",
+    "Année": "Année",
+    "Années": "Années",
+    "À vie": "À vie",
+    
+    "Une erreur est survenue.": "Une erreur est survenue."
 } 
