AMélioration des crud Tools admin , FIx ds packages de paiement

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -802,5 +802,24 @@
     "FAQ category added successfully.": "FAQ category added successfully.",
     "FAQ category updated successfully.": "FAQ category updated successfully.",
     "FAQ category deleted successfully.": "FAQ category deleted successfully.",
-    "Category order updated successfully.": "Category order updated successfully."
+    "Category order updated successfully.": "Category order updated successfully.",
+    "Current Subscription": "Current Subscription",
+    "Package": "Package",
+    "Trial Period": "Trial Period",
+    "Cycle": "Cycle",
+    "Monthly": "Monthly",
+    "Annual": "Annual",
+    "Lifetime": "Lifetime",
+    "Start Date": "Start Date",
+    "Trial End Date": "Trial End Date",
+    "Expiration Date": "Expiration Date",
+    "Time Remaining": "Time Remaining",
+    "days remaining": "days remaining",
+    "Expires today": "Expires today",
+    "Manage Subscription": "Manage Subscription",
+    "Subscription": "Subscription",
+    "No active subscription": "No active subscription",
+    "Explore our packages to access premium features.": "Explore our packages to access premium features.",
+    "View Packages": "View Packages",
+    "N/A": "N/A"
 } 
