--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -238,19 +238,19 @@
     "Don't have an account?": "¿No tienes una cuenta?",
     "Register now": "Regístrate ahora",
     "Back to login": "Volver al inicio de sesión",
-    "My Account": "Mi Cuenta",
+    "My Account": "Mi cuenta",
     "Account Settings": "Configuración de la Cuenta",
     "My Packages": "Mis Paquetes",
     "Activity History": "Historial de Actividad",
     "Member since": "Miembro desde",
-    "Personal Information": "Información Personal",
-    "Edit Profile": "Editar Perfil",
-    "Account Status": "Estado de la Cuenta",
+    "Personal Information": "Información personal",
+    "Edit Profile": "Editar perfil",
+    "Account Status": "Estado de la cuenta",
     "Status": "Estado",
     "Active": "Activo",
-    "Account Type": "Tipo de Cuenta",
+    "Account Type": "Tipo de cuenta",
     "Administrator": "Administrador",
-    "Standard User": "Usuario Estándar",
+    "Standard User": "Usuario estándar",
     
     "Manage your account settings, preferences, notifications and security options.": "Administre la configuración de su cuenta, preferencias, notificaciones y opciones de seguridad.",
     "Settings Menu": "Menú de Configuración",
@@ -274,7 +274,7 @@
     "Enable marketing emails": "Activar correos de marketing",
     
     "Manage your tool packages and subscriptions.": "Administre sus paquetes de herramientas y suscripciones.",
-    "Current Subscription": "Suscripción Actual",
+    "Current Subscription": "Suscripción actual",
     "Free Plan": "Plan Gratuito",
     "Basic access to all tools": "Acceso básico a todas las herramientas",
     "Renewed on": "Renovado el",
@@ -552,8 +552,8 @@
     "Hourly": "Cada hora",
     "Daily": "Diariamente",
     "Weekly": "Semanalmente",
-    "Monthly": "Mensualmente",
-    "Yearly": "Anualmente",
+    "Monthly": "Mensual",
+    "Yearly": "Anual",
     "Never": "Nunca",
     "Compteur de caractères pour les champs méta": "Contador de caracteres para campos meta",
     "Génère le sitemap XML du site pour toutes les langues": "Genera el sitemap XML del sitio para todos los idiomas",
@@ -734,5 +734,25 @@
     "Désactiver": "Desactivar",
     "Activer": "Activar",
     "What People Say": "Lo que dice la gente",
-    "Trusted by thousands of developers worldwide": "Confiado por miles de desarrolladores en todo el mundo"
+    "Trusted by thousands of developers worldwide": "Confiado por miles de desarrolladores en todo el mundo",
+    "Current Subscription": "Suscripción actual",
+    "Package": "Paquete",
+    "Trial Period": "Período de prueba",
+    "Cycle": "Ciclo",
+    "Monthly": "Mensual",
+    "Annual": "Anual",
+    "Lifetime": "De por vida",
+    "Start Date": "Fecha de inicio",
+    "Trial End Date": "Fecha de finalización de prueba",
+    "Expiration Date": "Fecha de vencimiento",
+    "Time Remaining": "Tiempo restante",
+    "days remaining": "días restantes",
+    "Expires today": "Vence hoy",
+    "Manage Subscription": "Gestionar suscripción",
+    "Subscription": "Suscripción",
+    "No active subscription": "Sin suscripción activa",
+    "Explore our packages to access premium features.": "Explore nuestros paquetes para acceder a funciones premium.",
+    "View Packages": "Ver paquetes",
+    
+    "N/A": "N/D"
 } 
